# semantic-service

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
semantic_api/: __init__.py  deps.py  main.py  schemas.py
semantic_api/routes/: __init__.py  documents.py  search.py  test.py
semantic_core/: __init__.py  models.py
semantic_core/chunking/: __init__.py  base.py
semantic_core/embeddings/: __init__.py  base.py  gemini.py
semantic_core/ingest/: __init__.py  normalize.py  normalizer.py  readers.py
semantic_core/metadata/: __init__.py  base.py  coopwise.py  winnov8.py
semantic_core/pipeline/: __init__.py  indexer.py  searcher.py
semantic_core/pipelines/: searcher.py
semantic_core/vectorstores/: __init__.py  base.py  faiss_store.py  pgvector_store.py  qdrant_store.py
