[project]
name = "semantic-service"
version = "0.1.0"
description = "Semantic search service with embeddings, vector stores, and FastAPI."
requires-python = ">=3.10"
readme = "README.md"
license = "MIT"

authors = [
  { name = "Olaniyi George", email = "olaniyigeorge77@gmail.com" }
]

classifiers = [
  "Programming Language :: Python :: 3",
  "Framework :: FastAPI",
]

dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "python-multipart",
  "pydantic>=2.7.0",
  "httpx>=0.27.0",
  "pypdf>=6.7.0"
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "ruff>=0.6.0", "mypy>=1.10.0"]
postgres = ["pgvector>=0.2.5"]
qdrant = ["qdrant-client>=1.9.0"]
faiss = ["faiss-cpu>=1.8.0"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[tool.setuptools]
packages = ["semantic_api", "semantic_core"]